--- a/src/AnonQJobs/AnonQJobs.csproj
+++ b/src/AnonQJobs/AnonQJobs.csproj
@@ -2,9 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>1d00948c-5971-4203-8472-9a7878f864c5</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
     <PackageReference Include="Quartz" Version="3.2.3" />
   </ItemGroup>
 
